add options,patch allow method CROS